--- a/ColorBlindAccessibleUI/ColorBlindAccessibleUI.csproj
+++ b/ColorBlindAccessibleUI/ColorBlindAccessibleUI.csproj
@@ -154,6 +154,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettlementNameplateColorPatch.cs" />
     <Compile Include="UIColorsPatch.cs" />
+    <Content Include="Readme.txt" />
     <Content Include="SubModule.xml" />
   </ItemGroup>
   <!-- Post-Build -->
