adds support for battle formation colors

--- a/ColorBlindAccessibleUI/ColorBlindAccessibleUI.csproj
+++ b/ColorBlindAccessibleUI/ColorBlindAccessibleUI.csproj
@@ -123,6 +123,9 @@
       <HintPath>G:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.MountAndBlade.ViewModelCollection.dll</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="TaleWorlds.TwoDimension">
+      <HintPath>G:\SteamLibrary\steamapps\common\Mount &amp; Blade II Bannerlord\bin\Win64_Shipping_Client\TaleWorlds.TwoDimension.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <!-- Files & Classes -->
   <ItemGroup>
